--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: musicplayer
-description: A new Flutter application.
+name: Mu_Player
+description: A simple audio player using Flutter
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flute_music_player: ^0.0.6
+  splashscreen: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -43,9 +44,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/lady.jpeg
-    - assets/music_record.jpeg
-
+    - assets/background.jpg
+    - assets/music_record.png
+    - assets/splash_eclips.gif
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
