--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Mu_Player
+name: mu_player
 description: A simple audio player using Flutter
 
 # The following defines the version and build number for your application.
